--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "flickr-vr-react",
+  "version": "0.0.1",
   "description": "Flickr VR viewer for equirectangular panoramas",
+  "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/config.dev.js --port 9000",
     "build": "webpack --config webpack/config.prod.js"
