--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "homepage": "https://si7o.github.io/flickr-vr-react/",
   "name": "flickr-vr-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Flickr VR viewer for equirectangular panoramas",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/config.dev.js --port 9000",
-    "build": "webpack --config webpack/config.prod.js"
+    "build": "webpack --config webpack/config.prod.js --env basepath='/flickr-vr-react'"
   },
   "dependencies": {
     "@egjs/react-view360": "^3.0.1",
