--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/config.dev.js --port 9000",
-    "build": "webpack --config webpack/config.prod.js --env basepath=flickr-vr-react"
+    "build": "webpack --config webpack/config.prod.js"
   },
   "dependencies": {
     "@egjs/react-view360": "^3.0.1",
