--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Flickr VR viewer for equirectangular panoramas",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/config.dev.js --port 9000",
-    "build": "webpack --config webpack/config.prod.js"
+    "start": "webpack serve --config webpack/config.dev.js --port 9002",
+    "build": "webpack --config webpack/config.prod.js",
+    "test": "jest --color --coverage",
+    "test:watch": "jest --watch --noStackTrace --color "
   },
   "dependencies": {
     "@egjs/react-view360": "^3.0.1",
     "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.15.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -60,6 +63,42 @@
   "babel": {
     "presets": [
       "babel-preset-react-app"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "./setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "^components(.*)$": "<rootDir>/src/components/$1",
+      "^pages/(.*)$": "<rootDir>/src/pages/$1",
+      "^services/(.*)$": "<rootDir>/src/services/$1",
+      "^helpers(.*)$": "<rootDir>/src/helpers/$1"
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 40,
+        "functions": 40,
+        "lines": 40,
+        "statements": 40
+      }
+    },
+    "modulePathIgnorePatterns": [
+      "mocks.js",
+      "testing",
+      ".history",
+      ".disabled"
     ]
   }
 }
