--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
       "^components(.*)$": "<rootDir>/src/components/$1",
       "^pages/(.*)$": "<rootDir>/src/pages/$1",
       "^services/(.*)$": "<rootDir>/src/services/$1",
-      "^helpers(.*)$": "<rootDir>/src/helpers/$1"
+      "^helpers(.*)$": "<rootDir>/src/helpers/$1",
+      "^utils(.*)$": "<rootDir>/src/utils/$1"
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
