--- a/package.json
+++ b/package.json
@@ -81,7 +81,10 @@
     },
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/*.{js,jsx}",
+      "!src/services/**/*.{js,jsx}",
+      "!src/index.js"
+
     ],
     "coverageReporters": [
       "json",
